<resources>
    <string name="app_name">Proiect</string>
    <string name="rent_manager">Rent Manager</string>
    <string name="androidele_RentManager">Rent Manager</string>
    <string name="androidele_email">Email</string>
    <string name="androidele_Password">Password</string>
    <string name="androidele_login">Login</string>
    <string name="androidele_register">You don\'t have an account? Register here.</string>
    <string name="androidele_fullName">Full Name</string>
    <string name="androidele_FullNameRequired">Complete your full name, please!</string>
    <string name="androidele_emailRequired">Email is required!</string>
    <string name="androidele_invalidEmail">Invalid email.</string>
    <string name="androidele_completePass">Complete your password, please!</string>
    <string name="androidele_registerFailed">Register failed. Try again!</string>
    <string name="androidele_paramSuccessfully">%1$s, you have been registered successfully</string>
    <string name="androidele_paramFailed">%1$s, your registration has failed. Please try again!</string>
    <string name="androidele_loginFailed">Login failed. Try again!</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="androidele_apartamente">Apartments</string>
    <string name="androidele_chiriasi">Tenants</string>
    <string name="androidele_owner">Owner: %1$s</string>
    <string name="androidele_errLoadingData">Error loading data</string>
    <string name="androidele_invalidPassword">Password should have at least 8 characters!</string>
    <string name="nothing_to_see_here">Nothing to see here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_new_apartment">Add a new apartment</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="available">Available</string>
    <string name="occupied">Occupied</string>
    <string name="availability">Availability</string>
    <string name="rent_per_month">Rent per month</string>
    <string name="available_from_date">Available from date</string>
    <string name="add_apartment">Add apartment</string>
    <string name="availability_date">Availability date</string>
    <string name="androidele_Title_required">Complete the apartment title, please!</string>
    <string name="androidele_incorrect_rent_field">Field incorrectly completed!</string>
    <string name="androidele_invalid_format_availabilityDate">Invalid date. Format required: dd/mm/yyyy</string>
    <string name="add_apartment_name">Apartment name</string>
    <string name="apartment_title">Apartment title</string>
    <string name="tenant_name">Tenant name</string>
    <string name="add_tenant_name">Tenant name</string>
    <string name="apartment_address">Apartment address</string>
    <string name="lv_row_default_value">-</string>
    <string name="show_pressed_option">\You pressed the option %1$s\</string>
    <string name="new_apartment_received">A new apartment was added</string>
    <string name="register">Register</string>
    <string name="androidele_phone">Phone</string>
    <string name="androidele_nothingHere">Nothing here</string>
    <string name="androidele_details">Details</string>
    <string name="androidele_update">Update</string>
    <string name="androidele_logout">Logout</string>
    <string name="androidele_updatedSuccess">Updated successfully!</string>
    <string name="androidele_motto">Here is the secret of a successful lessor!</string>
    <string name="androidele_details_intro">Details</string>
    <string name="androidele_you_enjoy_this_app_rate_it_here">You enjoy this app? Rate it here :)</string>
    <string name="androidele_you_rated_app">You rated this app!</string>
    <string name="androidele_dark_theme">Dark theme</string>
    <string name="androidele_dark_mode_activated">Dark mode activated!</string>
    <string name="androidele_light_mode_activated">Light mode activated!</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="androidele_tenant_phone">Tenant phone</string>
    <string name="androidele_available_locations">Available locations</string>
    <string name="androidele_location_city">Location city</string>
    <string name="androidele_location_address">Location address</string>
    <string name="androidele_location_price">Location price</string>
    <string name="androidele_tenant_name">Tenant name</string>
    <string name="utilities">Utilities</string>
    <string name="invoices">Invoices</string>
    <string name="filters">FILTERS</string>
    <string name="add">ADD</string>
    <string name="ut_name">Utility name</string>
    <string name="utility_provider">Utility provider</string>
    <string name="no_utility_name">No utility name</string>
    <string name="no_provider">No provider</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="cant_select_all">You can\'t select \'ALL\' here</string>
    <string name="date">Date</string>
    <string name="invoice_value">Invoice Value</string>
    <string name="noinvoice_date">No date</string>
    <string name="noinvoice_apartment">No apartment</string>
    <string name="noinvoice_value">No value</string>
    <string name="no_invoice_utility">No utility</string>
    <string name="utility_id">Utility ID</string>
    <string name="complete_apart_name">Complete the apartment name</string>
    <string name="utility_id_invalid">Utility ID is invalid</string>
    <string name="doesnt_exist">This utility doesn\'t exist</string>
    <string name="invalid_value">Invalid value for invoice</string>
    <string name="complete_invoice_date">Complete the invoice date</string>
    <string name="new_invoicee">A new invoice has been added</string>
    <string name="all">ALL</string>
    <string name="invoice_updated">The invoice has been updated</string>
    <string name="enel">ENEL</string>
    <string name="utility_name">Utility name</string>
    <string name="add_a_new_utility">Add a new utility</string>
    <string name="add_a_new_invoice">Add a new invoice</string>
    <string name="write_down_which_one_you_want_to_edit">Write down which one you want to edit</string>
    <string name="invalid">Invalid number. It should be one between 1 and the length of list</string>

    <string-array name="apartment_nr_of_rooms">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="providers">
        <item>ALL</item>
        <item>ENEL</item>
        <item>AQUA NOVA</item>
        <item>DISTRIGAZ</item>
        <item>ENGIE</item>
        <item>APA 2000</item>
    </string-array>
    <string-array name="utility_names">
        <item>ALL</item>
        <item>Energy</item>
        <item>Gas</item>
        <item>Water</item>
    </string-array>
    <string-array name="values">
        <item>ALL</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>
</resources>