<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/androidele_apartments"
            android:icon="@drawable/ic_baseline_apartment_24"
            android:title="@string/androidele_apartamente" />
        <item
            android:id="@+id/androidele_chiriasi"
            android:icon="@drawable/ic_baseline_people_alt_24"
            android:title="@string/androidele_chiriasi" />

        <item
            android:id="@+id/androidele_availableLocations"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/androidele_available_locations" />

        <item
            android:id="@+id/androidele_details"
            android:icon="@drawable/ic_baseline_event_note_24"
            android:title="@string/androidele_details" />

        <item
            android:id="@+id/androidele_utilities"
            android:icon="@drawable/ic_baseline_battery_charging_full_24"
            android:title="@string/utilities"></item>

        <item
            android:id="@+id/androidele_invoices"
            android:icon="@drawable/ic_baseline_description_24"
            android:title="@string/invoices"></item>
    </group>
</menu>