<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/item_background">

    <ImageView
        android:id="@+id/androidele_iv_row_pictureApartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_baseline_apartment_24"
        android:contentDescription="@string/add_apartment_name"

        />

    <TextView
        android:id="@+id/androidele_tv_row_apartment_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/apartment_title"
        android:fontFamily="@font/coming_soon"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/androidele_iv_row_pictureApartment"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/androidele_tv_row_tenant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tenant_name"
        android:fontFamily="@font/coming_soon"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/androidele_iv_row_pictureTenant"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toEndOf="@+id/androidele_tv_row_apartment_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/androidele_iv_row_pictureTenant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/add_tenant_name"
        android:src="@drawable/ic_baseline_people_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/androidele_tv_row_apartment_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/apartment_address"
        android:fontFamily="@font/coming_soon"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/androidele_iv_row_pictureApartment"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>